Added mono-cards for single item storage, added models for batteries, need to work on inventory component for digistores now.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -84,6 +84,13 @@
 	"item.staticpower.digistore_card_static": "Static Digistore Card",
 	"item.staticpower.digistore_card_energized": "Energized Digistore Card",
 	"item.staticpower.digistore_card_lumum": "Lumum Digistore Card",
+	"item.staticpower.digistore_card_creative": "Creative Digistore Card",
+	"item.staticpower.digistore_card_singular_basic": "Basic Digistore Mono Card",
+	"item.staticpower.digistore_card_singular_advanced": "Advanced Digistore Mono Card",
+	"item.staticpower.digistore_card_singular_static": "Static Digistore Mono Card",
+	"item.staticpower.digistore_card_singular_energized": "Energized Digistore Mono Card",
+	"item.staticpower.digistore_card_singular_lumum": "Lumum Digistore Mono Card",
+	"item.staticpower.digistore_card_singular_creative": "Creative Digistore Mono Card",
 	"item.staticpower.cover": "Cover",
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
