--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -171,20 +171,20 @@
 	"item.staticpower.bucket_steam": "Steam Bucket",
 	"item.staticpower.bucket_tree_oil": "Tree Oil Bucket",
 	"item.staticpower.bucket_juice_apple": "Apple Juice Bucket",
-	"item.staticpower.bucket_juice_beet": "Beet Juice Bucket",
+	"item.staticpower.bucket_juice_beetroot": "Beetroot Juice Bucket",
 	"item.staticpower.bucket_juice_pumpkin": "Pumpkin Juice Bucket",
 	"item.staticpower.bucket_juice_carrot": "Carrot Juice Bucket",
 	"item.staticpower.bucket_juice_berry": "Berry Juice Bucket",
-	"item.staticpower.bucket_juice_watermelon": "Watermelon Bucket",
+	"item.staticpower.bucket_juice_melon": "Melon Bucket",
 	"item.staticpower.bucket_liquid_fertilizer": "Fertilizer Bucket",
 	"item.staticpower.bucket_seed_oil": "Seed Oil Bucket",
 	"item.staticpower.bucket_honey": "Honey Bucket",
 	"item.staticpower.bottle_juice_apple": "Apple Juice Bottle",
-	"item.staticpower.bottle_juice_beet": "Beet Juice Bottle",
+	"item.staticpower.bottle_juice_beetroot": "Beetroot Juice Bottle",
 	"item.staticpower.bottle_juice_pumpkin": "Pumpkin Juice Bottle",
 	"item.staticpower.bottle_juice_carrot": "Carrot Juice Bottle",
 	"item.staticpower.bottle_juice_berry": "Berry Juice Bottle",
-	"item.staticpower.bottle_juice_watermelon": "Watermelon Bottle",
+	"item.staticpower.bottle_juice_melon": "Melon Bottle",
 	"item.staticpower.cable_attachment_basic_extractor": "Basic Extractor",
 	"item.staticpower.cable_attachment_advanced_extractor": "Advanced Extractor",
 	"item.staticpower.cable_attachment_static_extractor": "Static Extractor",
@@ -273,6 +273,7 @@
 	"block.staticpower.machine_former": "Former",
 	"block.staticpower.machine_crucible": "Crucible",
 	"block.staticpower.machine_squeezer": "Squeezer",
+	"block.staticpower.machine_bottler": "Bottler",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -332,11 +333,11 @@
 	"fluid.staticpower.steam": "Steam",
 	"fluid.staticpower.tree_oil": "Tree Oil",
 	"fluid.staticpower.juice_apple": "Apple Juice",
-	"fluid.staticpower.juice_beet": "Beet Juice",
+	"fluid.staticpower.juice_beetroot": "Beetroot Juice",
 	"fluid.staticpower.juice_pumpkin": "Pumpkin Juice",
 	"fluid.staticpower.juice_carrot": "Carrot Juice",
 	"fluid.staticpower.juice_berry": "Berry Juice",
-	"fluid.staticpower.juice_watermelon": "Watermelon Juice",
+	"fluid.staticpower.juice_melon": "Melon Juice",
 	"fluid.staticpower.liquid_fertilizer": "Fertilizer",
 	"fluid.staticpower.seed_oil": "Seed Oil",
 	"fluid.staticpower.honey": "Honey",
