--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -274,6 +274,7 @@
 	"block.staticpower.machine_crucible": "Crucible",
 	"block.staticpower.machine_squeezer": "Squeezer",
 	"block.staticpower.machine_bottler": "Bottler",
+	"block.staticpower.soldering_table": "Soldering Table",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
