--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -9,6 +9,7 @@
 	"item.staticpower.wire_copper": "Copper Wire",
 	"item.staticpower.wire_silver": "Silver Wire",
 	"item.staticpower.wire_gold": "Gold Wire",
+	"item.staticpower.wire_platinum": "Platinum Wire",
 	"item.staticpower.coil_copper": "Copper Wire Coil",
 	"item.staticpower.coil_silver": "Silver Wire Coil",
 	"item.staticpower.coil_gold": "Gold Wire Coil",
@@ -175,7 +176,7 @@
 	"item.staticpower.bucket_juice_pumpkin": "Pumpkin Juice Bucket",
 	"item.staticpower.bucket_juice_carrot": "Carrot Juice Bucket",
 	"item.staticpower.bucket_juice_berry": "Berry Juice Bucket",
-	"item.staticpower.bucket_juice_melon": "Melon Bucket",
+	"item.staticpower.bucket_juice_melon": "Melon Juice Bucket",
 	"item.staticpower.bucket_liquid_fertilizer": "Fertilizer Bucket",
 	"item.staticpower.bucket_seed_oil": "Seed Oil Bucket",
 	"item.staticpower.bucket_honey": "Honey Bucket",
@@ -184,7 +185,7 @@
 	"item.staticpower.bottle_juice_pumpkin": "Pumpkin Juice Bottle",
 	"item.staticpower.bottle_juice_carrot": "Carrot Juice Bottle",
 	"item.staticpower.bottle_juice_berry": "Berry Juice Bottle",
-	"item.staticpower.bottle_juice_melon": "Melon Bottle",
+	"item.staticpower.bottle_juice_melon": "Melon Juice Bottle",
 	"item.staticpower.cable_attachment_basic_extractor": "Basic Extractor",
 	"item.staticpower.cable_attachment_advanced_extractor": "Advanced Extractor",
 	"item.staticpower.cable_attachment_static_extractor": "Static Extractor",
@@ -275,6 +276,7 @@
 	"block.staticpower.machine_squeezer": "Squeezer",
 	"block.staticpower.machine_bottler": "Bottler",
 	"block.staticpower.soldering_table": "Soldering Table",
+	"block.staticpower.industrial_soldering_table": "Industrial Solderer",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
