Added recipes for covers, added saws, minor tweaks and improvments, added animations and sync to the fluid tank component.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -6,6 +6,11 @@
 	"item.staticpower.metal_hammer": "Forge Hammer",
 	"item.staticpower.soldering_iron": "Soldering Iron",
 	"item.staticpower.soldering_iron_electric": "Electric Soldering Iron",
+	"item.staticpower.saw_iron": "Iron Saw",
+	"item.staticpower.saw_tungsten": "Tungsten Saw",
+	"item.staticpower.saw_diamond": "Diamond Saw",
+	"item.staticpower.saw_ruby": "Ruby Saw",
+	"item.staticpower.saw_sapphire": "Sapphire Saw",
 	"item.staticpower.wire_copper": "Copper Wire",
 	"item.staticpower.wire_tin": "Tin Wire",
 	"item.staticpower.wire_silver": "Silver Wire",
