--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -357,7 +357,10 @@
 	"block.staticpower.lamp_lumum": "Lumum Lamp",
 	"block.staticpower.machine_block_iron": "Iron Machine Block",
 	"block.staticpower.machine_block_basic": "Basic Machine Block",
+	"block.staticpower.machine_block_advanced": "Advanced Machine Block",
 	"block.staticpower.machine_block_static": "Static Machine Block",
+	"block.staticpower.machine_block_energized": "Energized Machine Block",
+	"block.staticpower.machine_block_lumum": "Lumum Machine Block",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
 	"fluid.staticpower.mash": "Mash",
