Added new farmland. Added in fertalizer recipes. Modified GUI and held models for exporter and importer. Fixed digistore block rendered number sync. Changed both farmer blocks to use the new fertailizer recipes.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -262,10 +262,12 @@
 	"item.staticpower.upgrade_quarrying_static": "Static Quarry Upgrade",
 	"item.staticpower.upgrade_quarrying_energized": "Energized Quarry Upgrade",
 	"item.staticpower.upgrade_quarrying_lumum": "Lumum Quarry Upgrade",
-	"block.staticpower.grass_static": "Static Static",
-	"block.staticpower.grass_energized": "Energized Static",
+	"block.staticpower.grass_static": "Static Grass",
+	"block.staticpower.grass_energized": "Energized Grass",
 	"block.staticpower.grass_lumum": "Lumum Static",
-	"block.staticpower.advanced_earth": "Advanced Earth",
+	"block.staticpower.farmland_static": "Static Farmland",
+	"block.staticpower.farmland_energized": "Energized Farmland",
+	"block.staticpower.farmland_lumum": "Lumum Farmland",
 	"block.staticpower.planks_static": "Static Planks",
 	"block.staticpower.planks_energized": "Energized Planks",
 	"block.staticpower.planks_lumum": "Lumum Planks",
