Added burnder miner with drills. Added some additional dusts and textures and recipes. Need to implement drill bits.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -30,6 +30,16 @@
 	"item.staticpower.diode": "Diode",
 	"item.staticpower.io_port": "I/O Port",
 	"item.staticpower.transistor": "Transistor",
+	"item.staticpower.drill_bit_iron": "Iron Drill Bit",
+	"item.staticpower.drill_bit_bronze": "Bronze Drill Bit",
+	"item.staticpower.drill_bit_advanced": "Advanced Drill Bit",
+	"item.staticpower.drill_bit_tungsten": "Tungsten Drill Bit",
+	"item.staticpower.drill_bit_diamond": "Diamond Drill Bit",
+	"item.staticpower.drill_bit_ruby": "Ruby Drill Bit",
+	"item.staticpower.drill_bit_sapphire": "Sapphire Drill Bit",
+	"item.staticpower.drill_bit_static": "Static Drill Bit",
+	"item.staticpower.drill_bit_energized": "Energized Drill Bit",
+	"item.staticpower.drill_bit_lumum": "Lumum Drill Bit",
 	"item.staticpower.processor_basic": "Basic Processor",
 	"item.staticpower.processor_advanced": "Advanced Processor",
 	"item.staticpower.processor_static": "Static Processor",
@@ -111,6 +121,7 @@
 	"item.staticpower.dust_ruby": "Ruby Dust",
 	"item.staticpower.dust_sapphire": "Sapphire Dust",
 	"item.staticpower.dust_emerald": "Emerald Dust",
+	"item.staticpower.dust_diamond": "Diamond Dust",
 	"item.staticpower.dust_coal": "Coal Dust",
 	"item.staticpower.dust_charcoal": "Charcoal Dust",
 	"item.staticpower.dust_wood": "Saw Dust",
@@ -294,6 +305,7 @@
 	"block.staticpower.soldering_table": "Soldering Table",
 	"block.staticpower.machine_industrial_soldering_table": "Industrial Solderer",
 	"block.staticpower.machine_industrial_crafting_table": "Industrial Crafter",
+	"block.staticpower.machine_miner": "Solid Fueled Miner",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
