Started implementing heat system.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -408,6 +408,9 @@
 	"gui.staticpower.millbuckets": "mB",
 	"gui.staticpower.energy_unit": "FE",
 	"gui.staticpower.energy_unit_per_tick": "FE/t",
+	"gui.staticpower.heat_unit": "H",
+	"gui.staticpower.heat_unit_per_tick": "H/t",
+	"gui.staticpower.heat_transfer": "Heat Transfer",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
 	"gui.staticpower.side.front": "Front",
