Added heatsink and heat cables to help manage heat buildup in industrial machines.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -330,6 +330,11 @@
 	"block.staticpower.cable_item_lumum": "Lumum Item Tube",
 	"block.staticpower.cable_item_creative": "Creative Item Tube",
 	"block.staticpower.cable_digistore": "Digistore Cable",
+	"block.staticpower.cable_heat_copper": "Copper Heat Pipe",
+	"block.staticpower.cable_heat_tin": "Tin Heat Pipe",
+	"block.staticpower.cable_heat_silver": "Silver Heat Pipe",
+	"block.staticpower.cable_heat_gold": "Gold Heat Pipe",
+	"block.staticpower.cable_heat_aluminium": "Aluminium Heat Pipe",
 	"block.staticpower.tank_basic": "Tank",
 	"block.staticpower.digistore": "Digistore",
 	"block.staticpower.digistore_io_port": "Digistore I/O Port",
@@ -381,6 +386,7 @@
 	"block.staticpower.machine_block_static": "Static Machine Block",
 	"block.staticpower.machine_block_energized": "Energized Machine Block",
 	"block.staticpower.machine_block_lumum": "Lumum Machine Block",
+	"block.staticpower.heat_sink_copper": "Copper Heat Sink",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
 	"fluid.staticpower.mash": "Mash",
