Added tiers of heat sinks, optimized dissipation algorithm, cleaned up heat transfer and storage, added distillery, allowed air to dissipate heat, and a slew of minor tweaks.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -309,6 +309,7 @@
 	"block.staticpower.machine_industrial_crafting_table": "Industrial Crafter",
 	"block.staticpower.machine_miner": "Solid Fueled Miner",
 	"block.staticpower.machine_electric_miner": "Electric Miner",
+	"block.staticpower.machine_distillery": "Distillery",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -386,7 +387,11 @@
 	"block.staticpower.machine_block_static": "Static Machine Block",
 	"block.staticpower.machine_block_energized": "Energized Machine Block",
 	"block.staticpower.machine_block_lumum": "Lumum Machine Block",
+	"block.staticpower.heat_sink_aluminium": "Aluminium Heat Sink",
 	"block.staticpower.heat_sink_copper": "Copper Heat Sink",
+	"block.staticpower.heat_sink_tin": "Tin Heat Sink",
+	"block.staticpower.heat_sink_silver": "Silver Heat Sink",
+	"block.staticpower.heat_sink_gold": "Gold Heat Sink",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
 	"fluid.staticpower.mash": "Mash",
@@ -414,8 +419,8 @@
 	"gui.staticpower.millbuckets": "mB",
 	"gui.staticpower.energy_unit": "FE",
 	"gui.staticpower.energy_unit_per_tick": "FE/t",
-	"gui.staticpower.heat_unit": "H",
-	"gui.staticpower.heat_unit_per_tick": "H/t",
+	"gui.staticpower.heat_unit": "°",
+	"gui.staticpower.heat_unit_per_tick": "°/t",
 	"gui.staticpower.heat_transfer": "Heat Transfer",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
