--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -309,7 +309,7 @@
 	"block.staticpower.machine_industrial_crafting_table": "Industrial Crafter",
 	"block.staticpower.machine_miner": "Solid Fueled Miner",
 	"block.staticpower.machine_electric_miner": "Electric Miner",
-	"block.staticpower.machine_distillery": "Distillery",
+	"block.staticpower.machine_evaporator": "Evaporator",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -419,9 +419,12 @@
 	"gui.staticpower.millbuckets": "mB",
 	"gui.staticpower.energy_unit": "FE",
 	"gui.staticpower.energy_unit_per_tick": "FE/t",
-	"gui.staticpower.heat_unit": "°",
-	"gui.staticpower.heat_unit_per_tick": "°/t",
+	"gui.staticpower.fluid_unit": "mB",
+	"gui.staticpower.fluid_unit_per_tick": "mB/t",
+	"gui.staticpower.heat_unit": "°H",
+	"gui.staticpower.heat_unit_per_tick": "°H/t",
 	"gui.staticpower.heat_transfer": "Heat Transfer",
+	"gui.staticpower.heat_conductivity": "C",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
 	"gui.staticpower.side.front": "Front",
