--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -415,6 +415,7 @@
 	"fluid.staticpower.concrete": "Concrete",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
+	"gui.staticpower.max_input": "Max Input",
 	"gui.staticpower.usage": "Usage",
 	"gui.staticpower.millbuckets": "mB",
 	"gui.staticpower.energy_unit": "FE",
@@ -447,7 +448,6 @@
 	"gui.staticpower.mode.output2": "Primary Output",
 	"gui.staticpower.mode.output3": "Secondary Output",
 	"gui.staticpower.mode.disabled": "Disabled",
-	"gui.staticpower.mode.max_input": "Max Input",
 	"gui.staticpower.ticks": "Ticks",
 	"gui.staticpower.seconds": "Seconds",
 	"gui.staticpower.seconds.short": "s",
