Rewrote processing components. Added motor. Changed servo texture. Added centrifuge recipe.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -26,6 +26,7 @@
 	"item.staticpower.silicon": "Silicon",
 	"item.staticpower.rubber": "Rubber",
 	"item.staticpower.servo": "Servo",
+	"item.staticpower.motor": "Motor",
 	"item.staticpower.memory_chip": "Memory Chip",
 	"item.staticpower.diode": "Diode",
 	"item.staticpower.io_port": "I/O Port",
