Checking all machines using new processing system. Moved fluid container component into its own inventory, no need to supply a separate one now. Added GUI for the heat sink.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -27,6 +27,7 @@
 	"item.staticpower.rubber": "Rubber",
 	"item.staticpower.servo": "Servo",
 	"item.staticpower.motor": "Motor",
+	"item.staticpower.plug": "Plug",
 	"item.staticpower.memory_chip": "Memory Chip",
 	"item.staticpower.diode": "Diode",
 	"item.staticpower.io_port": "I/O Port",
