Adding in static volts

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -426,8 +426,8 @@
 	"gui.staticpower.max_input": "Max Input",
 	"gui.staticpower.usage": "Usage",
 	"gui.staticpower.millbuckets": "mB",
-	"gui.staticpower.energy_unit": "FE",
-	"gui.staticpower.energy_unit_per_tick": "FE/t",
+	"gui.staticpower.energy_unit": "SV",
+	"gui.staticpower.energy_unit_per_tick": "SV/t",
 	"gui.staticpower.fluid_unit": "mB",
 	"gui.staticpower.fluid_unit_per_tick": "mB/t",
 	"gui.staticpower.heat_unit": "°H",
