Added fluid capsules back in!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -177,6 +177,13 @@
 	"item.staticpower.portable_battery_static": "Static Portable Battery",
 	"item.staticpower.portable_battery_energized": "Energized Portable Battery",
 	"item.staticpower.portable_battery_lumum": "Lumum Portable Battery",
+	"item.staticpower.capsule_iron": "Iron Capsule",
+	"item.staticpower.capsule_basic": "Basic Capsule",
+	"item.staticpower.capsule_advanced": "Advanced Capsule",
+	"item.staticpower.capsule_static": "Static Capsule",
+	"item.staticpower.capsule_energized": "Energized Capsule",
+	"item.staticpower.capsule_lumum": "Lumum Capsule",
+	"item.staticpower.capsule_creative": "Creative Capsule",
 	"item.staticpower.filter_item_basic": "Basic Item Filter",
 	"item.staticpower.filter_item_advanced": "Advanced Item Filter",
 	"item.staticpower.filter_item_static": "Static Item Filter",
