Added Static Seeds to grass loot and added system to handle appending to vanilla loot tables. Added TOP support for SV. Cleaned up some code. Added in icons for new upgrades. Tested end to end from miner to digistore with processing in between.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -174,9 +174,11 @@
 	"item.staticpower.mold_wire": "Wire Mold",
 	"item.staticpower.cable_network_analyzer": "Cable Network Analyzer",
 	"item.staticpower.portable_battery_basic": "Basic Portable Battery",
+	"item.staticpower.portable_battery_advanced": "Advanced Portable Battery",
 	"item.staticpower.portable_battery_static": "Static Portable Battery",
 	"item.staticpower.portable_battery_energized": "Energized Portable Battery",
 	"item.staticpower.portable_battery_lumum": "Lumum Portable Battery",
+	"item.staticpower.portable_battery_creative": "Creative Portable Battery",
 	"item.staticpower.capsule_iron": "Iron Capsule",
 	"item.staticpower.capsule_basic": "Basic Capsule",
 	"item.staticpower.capsule_advanced": "Advanced Capsule",
