Started adding upgrades to the digistore attachments and started planning out autocrafting.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -251,6 +251,7 @@
 	"item.staticpower.digistore_card_singular_energized": "Energized Digistore Mono Card",
 	"item.staticpower.digistore_card_singular_lumum": "Lumum Digistore Mono Card",
 	"item.staticpower.digistore_card_singular_creative": "Creative Digistore Mono Card",
+	"item.staticpower.digistore_pattern_card": "Pattern Card",
 	"item.staticpower.cover": "Cover",
 	"item.staticpower.upgrade_plate_basic": "Basic Upgrade Plate",
 	"item.staticpower.upgrade_plate_advanced": "Advanced Upgrade Plate",
@@ -283,6 +284,9 @@
 	"item.staticpower.upgrade_centrifuge_energized": "Energized Centrifuge Upgrade",
 	"item.staticpower.upgrade_centrifuge_lumum": "Lumum Centrifuge Upgrade",
 	"item.staticpower.upgrade_experience_vacuum": "Experience Vacuum Upgrade",
+	"item.staticpower.upgrade_stack": "Stack Upgrade",
+	"item.staticpower.upgrade_accelerator": "Accelerator Upgrade",
+	"item.staticpower.upgrade_crafting": "Crafting Upgrade",
 	"item.staticpower.upgrade_teleport": "Teleport Upgrade",
 	"item.staticpower.upgrade_digistore_void": "Digistore Void Upgrade",
 	"item.staticpower.upgrade_power_basic": "Basic Power Upgrade",
