Implemented proper upgrades on digistore attachments and fixed bounding box bug on attachments that connect a cable to a tile entity. Added new silicon types. Added armor slots to the digistore crafting terminal. Fixed issue where capsules had a heat tooltip instead of a fluid tooltip.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -24,6 +24,9 @@
 	"item.staticpower.logic_gate_power_sync": "Logic Gate Power Sync",
 	"item.staticpower.raw_silicon": "Raw Silicon",
 	"item.staticpower.silicon": "Silicon",
+	"item.staticpower.silicon_doped_static": "S-Doped Silicon",
+	"item.staticpower.silicon_doped_energized": "E-Doped Silicon",
+	"item.staticpower.silicon_doped_lumum": "L-Doped Silicon",
 	"item.staticpower.rubber": "Rubber",
 	"item.staticpower.servo": "Servo",
 	"item.staticpower.motor": "Motor",
