Added basic auto crafting! Need to add UI modal system to handle request popup and need to add system to daisy chain requests!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -368,6 +368,7 @@
 	"block.staticpower.digistore_io_port": "Digistore I/O Port",
 	"block.staticpower.digistore_manager": "Digistore Manager",
 	"block.staticpower.digistore_server_rack": "Server Rack",
+	"block.staticpower.digistore_atomic_constructor": "Atomic Constructor",
 	"block.staticpower.solar_panel_basic": "Basic Solar Panel",
 	"block.staticpower.solar_panel_advanced": "Advanced Solar Panel",
 	"block.staticpower.solar_panel_static": "Static Solar Panel",
