Added in cards. Worked on crafting alogirhtm

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -51,6 +51,11 @@
 	"item.staticpower.processor_static": "Static Processor",
 	"item.staticpower.processor_energized": "Energized Processor",
 	"item.staticpower.processor_lumum": "Lumum Processor",
+	"item.staticpower.card_basic": "Basic Card",
+	"item.staticpower.card_advanced": "Advanced Card",
+	"item.staticpower.card_static": "Static Card",
+	"item.staticpower.card_energized": "Energized Card",
+	"item.staticpower.card_lumum": "Lumum Card",
 	"item.staticpower.distillery_grain": "Distillery Grain",
 	"item.staticpower.bread_potato": "Potato Bread",
 	"item.staticpower.flour_potato": "Potato Flour",
