Added in a TON of recipes. Covered all upgrades and digistore cards. Added in some crafting only items.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -56,6 +56,7 @@
 	"item.staticpower.card_static": "Static Card",
 	"item.staticpower.card_energized": "Energized Card",
 	"item.staticpower.card_lumum": "Lumum Card",
+	"item.staticpower.digistore_core": "Digistore Core",
 	"item.staticpower.distillery_grain": "Distillery Grain",
 	"item.staticpower.bread_potato": "Potato Bread",
 	"item.staticpower.flour_potato": "Potato Flour",
