Added rubber trees.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -27,7 +27,8 @@
 	"item.staticpower.silicon_doped_static": "S-Doped Silicon",
 	"item.staticpower.silicon_doped_energized": "E-Doped Silicon",
 	"item.staticpower.silicon_doped_lumum": "L-Doped Silicon",
-	"item.staticpower.rubber": "Rubber",
+	"item.staticpower.rubber_sheet": "Rubber Sheet",
+	"item.staticpower.rubber_bar": "Rubber Bar",
 	"item.staticpower.servo": "Servo",
 	"item.staticpower.motor": "Motor",
 	"item.staticpower.plug": "Plug",
@@ -422,6 +423,13 @@
 	"block.staticpower.block_static_metal": "Static Metal Block",
 	"block.staticpower.block_energized_metal": "Energized Metal Block",
 	"block.staticpower.block_lumum_metal": "Lumum Metal Block",
+	"block.staticpower.rubber_tree_wood": "Rubber Wood",
+	"block.staticpower.rubber_tree_log": "Rubber Wood Log",
+	"block.staticpower.rubber_tree_stripped_log": "Stripped Rubber Wood Log",
+	"block.staticpower.rubber_tree_stripped_wood": "Stripped Rubber Wood",
+	"block.staticpower.rubber_tree_leaves": "Rubber Tree Leaves",
+	"block.staticpower.rubber_tree_sapling": "Rubber Tree Sapling",
+	"block.staticpower.rubber_tree_planks": "Rubber Tree Planks",
 	"block.staticpower.pump": "Fluid Pump",
 	"block.staticpower.glass_obsidian": "Obsidian Glass",
 	"block.staticpower.lamp_static": "Static Lamp",
