Added new loot tables. Added in latex and latex squeezing (may add a separate latex extractor). Added latex chunks.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -111,6 +111,7 @@
 	"item.staticpower.nugget_bronze": "Bronze Nugget",
 	"item.staticpower.gem_sapphire": "Sapphire",
 	"item.staticpower.gem_ruby": "Ruby",
+	"item.staticpower.latex_chunk": "Latex Chunk",
 	"item.staticpower.dust_copper": "Copper Dust",
 	"item.staticpower.dust_gold": "Gold Dust",
 	"item.staticpower.dust_iron": "Iron Dust",
@@ -221,6 +222,7 @@
 	"item.staticpower.bucket_seed_oil": "Seed Oil Bucket",
 	"item.staticpower.bucket_honey": "Honey Bucket",
 	"item.staticpower.bucket_concrete": "Concrete",
+	"item.staticpower.bucket_liquid_latex": "Latex",
 	"item.staticpower.bottle_milk": "Milk Bottle",
 	"item.staticpower.bottle_juice_apple": "Apple Juice Bottle",
 	"item.staticpower.bottle_juice_beetroot": "Beetroot Juice Bottle",
@@ -467,6 +469,7 @@
 	"fluid.staticpower.seed_oil": "Seed Oil",
 	"fluid.staticpower.honey": "Honey",
 	"fluid.staticpower.concrete": "Concrete",
+	"fluid.staticpower.liquid_latex": "Latex",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.max_input": "Max Input",
