--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -347,6 +347,7 @@
 	"block.staticpower.machine_electric_miner": "Electric Miner",
 	"block.staticpower.machine_evaporator": "Evaporator",
 	"block.staticpower.machine_condenser": "Condenser",
+	"block.staticpower.machine_vulcanizer": "Vulcanizer",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -425,6 +426,8 @@
 	"block.staticpower.block_static_metal": "Static Metal Block",
 	"block.staticpower.block_energized_metal": "Energized Metal Block",
 	"block.staticpower.block_lumum_metal": "Lumum Metal Block",
+	"block.staticpower.block_latex": "Latex Block",
+	"block.staticpower.block_rubber": "Rubber Block",
 	"block.staticpower.rubber_tree_wood": "Rubber Wood",
 	"block.staticpower.rubber_tree_log": "Rubber Wood Log",
 	"block.staticpower.rubber_tree_stripped_log": "Stripped Rubber Wood Log",
