Updated Vulcanizer. Added JEI handler. Added a ton more recipes. Added new types of coils and wire.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -16,9 +16,13 @@
 	"item.staticpower.wire_silver": "Silver Wire",
 	"item.staticpower.wire_gold": "Gold Wire",
 	"item.staticpower.wire_platinum": "Platinum Wire",
+	"item.staticpower.wire_aluminium": "Aluminium Wire",
 	"item.staticpower.coil_copper": "Copper Wire Coil",
 	"item.staticpower.coil_silver": "Silver Wire Coil",
 	"item.staticpower.coil_gold": "Gold Wire Coil",
+	"item.staticpower.coil_aluminium": "Aluminium Wire Coil",
+	"item.staticpower.coil_platinum": "Platinum Wire Coil",
+	"item.staticpower.coil_tin": "Tin Wire Coil",
 	"item.staticpower.internal_clock": "Internal Clock",
 	"item.staticpower.inverted_logic_gate_power_sync": "Inverted Logic Gate Power Sync",
 	"item.staticpower.logic_gate_power_sync": "Logic Gate Power Sync",
@@ -190,13 +194,13 @@
 	"item.staticpower.portable_battery_energized": "Energized Portable Battery",
 	"item.staticpower.portable_battery_lumum": "Lumum Portable Battery",
 	"item.staticpower.portable_battery_creative": "Creative Portable Battery",
-	"item.staticpower.capsule_iron": "Iron Capsule",
-	"item.staticpower.capsule_basic": "Basic Capsule",
-	"item.staticpower.capsule_advanced": "Advanced Capsule",
-	"item.staticpower.capsule_static": "Static Capsule",
-	"item.staticpower.capsule_energized": "Energized Capsule",
-	"item.staticpower.capsule_lumum": "Lumum Capsule",
-	"item.staticpower.capsule_creative": "Creative Capsule",
+	"item.staticpower.fluid_capsule_iron": "Iron Capsule",
+	"item.staticpower.fluid_capsule_basic": "Basic Capsule",
+	"item.staticpower.fluid_capsule_advanced": "Advanced Capsule",
+	"item.staticpower.fluid_capsule_static": "Static Capsule",
+	"item.staticpower.fluid_capsule_energized": "Energized Capsule",
+	"item.staticpower.fluid_capsule_lumum": "Lumum Capsule",
+	"item.staticpower.fluid_capsule_creative": "Creative Capsule",
 	"item.staticpower.filter_item_basic": "Basic Item Filter",
 	"item.staticpower.filter_item_advanced": "Advanced Item Filter",
 	"item.staticpower.filter_item_static": "Static Item Filter",
