--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -257,6 +257,8 @@
 	"item.staticpower.cable_attachment_digistore_io_bus": "I/O Bus",
 	"item.staticpower.cable_attachment_digistore_regulator": "Regulator",
 	"item.staticpower.cable_attachment_digistore_crafting_interface": "Crafting Interface",
+	"item.staticpower.cable_attachment_digistore_light": "Light Panel",
+	"item.staticpower.cable_attachment_digistore_screen": "Screen",
 	"item.staticpower.digistore_card_basic": "Basic Digistore Card",
 	"item.staticpower.digistore_card_advanced": "Advanced Digistore Card",
 	"item.staticpower.digistore_card_static": "Static Digistore Card",
