Added tiers of wrenches. Fixed some minor issues with Server sync. Changed crop and seed textures. Began testing as part of mod packs. Fixed random number issue with bark.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -1,6 +1,9 @@
 {
 	"itemGroup.StaticPower": "Static Power",
-	"item.staticpower.static_wrench": "Static Wrench",
+	"item.staticpower.wrench": "Wrench",
+	"item.staticpower.wrench_static": "Static Wrench",
+	"item.staticpower.wrench_energized": "Energized Wrench",
+	"item.staticpower.wrench_lumum": "Lumum Wrench",
 	"item.staticpower.tutorial_boock": "Static Text Book",
 	"item.staticpower.wire_cutters": "Wire Cutters",
 	"item.staticpower.metal_hammer": "Forge Hammer",
