Minor tweaks, added recipes for stems, infernal tree sap, tooltip path for widget containers in tabs.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -211,6 +211,7 @@
 	"item.staticpower.filter_item_energized": "Energized Item Filter",
 	"item.staticpower.filter_item_lumum": "Lumum Item Filter",
 	"item.staticpower.bucket_tree_sap": "Tree Sap Bucket",
+	"item.staticpower.bucket_infernal_tree_sap": "Infernal Tree Sap Bucket",
 	"item.staticpower.bucket_ethanol": "Ethanol Bucket",
 	"item.staticpower.bucket_mash": "Mash Bucket",
 	"item.staticpower.bucket_evaporated_mash": "Evaporated Mash Bucket",
@@ -462,6 +463,7 @@
 	"block.staticpower.heat_sink_silver": "Silver Heat Sink",
 	"block.staticpower.heat_sink_gold": "Gold Heat Sink",
 	"fluid.staticpower.tree_sap": "Tree Sap",
+	"fluid.staticpower.infernal_tree_sap": "Infernal Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
 	"fluid.staticpower.mash": "Mash",
 	"fluid.staticpower.evaporated_mash": "Evaporated Mash",
