Added custom power bar to drill.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -54,6 +54,11 @@
 	"item.staticpower.drill_bit_energized": "Energized Drill Bit",
 	"item.staticpower.drill_bit_lumum": "Lumum Drill Bit",
 	"item.staticpower.drill_bit_creative": "Creative Drill Bit",
+	"item.staticpower.mining_drill_basic": "Mining Drill",
+	"item.staticpower.mining_drill_advanced": "Advanced Mining Drill",
+	"item.staticpower.mining_drill_static": "Static Mining Drill",
+	"item.staticpower.mining_drill_energized": "Energized Mining Drill",
+	"item.staticpower.mining_drill_lumum": "Lumum Mining Drill",
 	"item.staticpower.processor_basic": "Basic Processor",
 	"item.staticpower.processor_advanced": "Advanced Processor",
 	"item.staticpower.processor_static": "Static Processor",
