Added in magnet, cleaned up drill logic and tooltips.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -4,6 +4,11 @@
 	"item.staticpower.wrench_static": "Static Wrench",
 	"item.staticpower.wrench_energized": "Energized Wrench",
 	"item.staticpower.wrench_lumum": "Lumum Wrench",
+	"item.staticpower.magnet_basic": "Magnet",
+	"item.staticpower.magnet_advanced": "Advanced Magnet",
+	"item.staticpower.magnet_static": "Static Magnet",
+	"item.staticpower.magnet_energized": "Energized Magnet",
+	"item.staticpower.magnet_lumum": "Lumum Magnet",
 	"item.staticpower.tutorial_boock": "Static Text Book",
 	"item.staticpower.wire_cutters": "Wire Cutters",
 	"item.staticpower.metal_hammer": "Forge Hammer",
@@ -530,6 +535,19 @@
 	"gui.staticpower.seconds.short": "s",
 	"gui.staticpower.max": "Max",
 	"gui.staticpower.rpm": "RPM",
+	"gui.staticpower.radius": "Radius",
 	"gui.staticpower.remaining": "Remaining",
-	"gui.staticpower.output_chance": "Output Chance"
+	"gui.staticpower.output_chance": "Output Chance",
+	"gui.staticpower.item_tier.wood": "Wood",
+	"gui.staticpower.item_tier.stone": "Stone",
+	"gui.staticpower.item_tier.iron": "Iron",
+	"gui.staticpower.item_tier.diamond": "Diamond",
+	"gui.staticpower.item_tier.gold": "Gold",
+	"gui.staticpower.item_tier.netherite": "Netherite",
+	"gui.staticpower.tier": "Tier",
+	"gui.staticpower.mining_tier": "Mining Tier",
+	"gui.staticpower.block_remaining": "Blocks Remaining",
+	"gui.staticpower.max_drillable_blocks": "Max Blocks Drilled",
+	"gui.staticpower.efficiency": "Efficiency",
+	"gui.staticpower.mining_speed": "Mining Speed"
 }
