Started adding a recipe handler for JEI for smithing. Implemented fortune as an attribute!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -368,6 +368,7 @@
 	"block.staticpower.machine_fluid_infuser": "Fluid Infuser",
 	"block.staticpower.machine_centrifuge": "Centrifuge",
 	"block.staticpower.machine_fusion_furnace": "Fusion Furnace",
+	"block.staticpower.machine_auto_smith": "Auto Smith",
 	"block.staticpower.soldering_table": "Soldering Table",
 	"block.staticpower.machine_industrial_soldering_table": "Industrial Solderer",
 	"block.staticpower.machine_industrial_crafting_table": "Industrial Crafter",
@@ -558,5 +559,7 @@
 	"gui.staticpower.efficiency": "Efficiency",
 	"gui.staticpower.mining_speed": "Mining Speed",
 	"gui.staticpower.active": "Active",
-	"gui.staticpower.inactive": "Inactive"
+	"gui.staticpower.inactive": "Inactive",
+	"gui.staticpower.fortune": "Fortune",
+	"gui.staticpower.attributes": "Attributes"
 }
