Added models and textures for autosmith and finished JEI integration. Next step is to use the attributes in the mining drill as a POC

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -561,5 +561,6 @@
 	"gui.staticpower.active": "Active",
 	"gui.staticpower.inactive": "Inactive",
 	"gui.staticpower.fortune": "Fortune",
+	"gui.staticpower.haste": "Haste",
 	"gui.staticpower.attributes": "Attributes"
 }
