Found bug with drill on bedrock, need to fix.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -562,5 +562,7 @@
 	"gui.staticpower.inactive": "Inactive",
 	"gui.staticpower.fortune": "Fortune",
 	"gui.staticpower.haste": "Haste",
-	"gui.staticpower.attributes": "Attributes"
+	"gui.staticpower.attributes": "Attributes",
+	"gui.staticpower.hold_shift": "Hold Shift",
+	"gui.staticpower.hold_control": "Hold Control"
 }
