Changed how extractors and retrieves work to change the speed items are inserted. Higher tier == higher speed of item in pipe. Allowed pipe networks to extract and insert on the same block on different sides.Disabled attachments on industrial fluid pipes.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -384,25 +384,25 @@
 	"block.staticpower.battery_block_energized": "Energized Battery",
 	"block.staticpower.battery_block_lumum": "Lumum Battery",
 	"block.staticpower.battery_block_creative": "Creative Battery",
-	"block.staticpower.cable_power_basic": "Basic Power Cable",
+	"block.staticpower.cable_power_basic": "Power Cable",
 	"block.staticpower.cable_power_advanced": "Advanced Power Cable",
 	"block.staticpower.cable_power_static": "Static Power Cable",
 	"block.staticpower.cable_power_energized": "Energized Power Cable",
 	"block.staticpower.cable_power_lumum": "Lumum Power Cable",
 	"block.staticpower.cable_power_creative": "Creative Power Cable",
-	"block.staticpower.cable_fluid_basic": "Basic Fluid Pipe",
+	"block.staticpower.cable_fluid_basic": "Fluid Pipe",
 	"block.staticpower.cable_fluid_advanced": "Advanced Fluid Pipe",
 	"block.staticpower.cable_fluid_static": "Static Fluid Pipe",
 	"block.staticpower.cable_fluid_energized": "Energized Fluid Pipe",
 	"block.staticpower.cable_fluid_lumum": "Lumum Fluid Pipe",
 	"block.staticpower.cable_fluid_creative": "Creative Fluid Pipe",
-	"block.staticpower.cable_industrial_fluid_basic": "Basic Industrial Fluid Pipe",
+	"block.staticpower.cable_industrial_fluid_basic": "Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_advanced": "Advanced Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_static": "Static Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_energized": "Energized Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_lumum": "Lumum Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_creative": "Creative Industrial Fluid Pipe",
-	"block.staticpower.cable_item_basic": "Basic Item Tube",
+	"block.staticpower.cable_item_basic": "Item Tube",
 	"block.staticpower.cable_item_advanced": "Advanced Item Tube",
 	"block.staticpower.cable_item_static": "Static Item Tube",
 	"block.staticpower.cable_item_energized": "Energized Item Tube",
@@ -566,5 +566,8 @@
 	"gui.staticpower.grinding": "Grinding",
 	"gui.staticpower.attributes": "Attributes",
 	"gui.staticpower.hold_shift": "Hold Shift",
-	"gui.staticpower.hold_control": "Hold Control"
+	"gui.staticpower.hold_control": "Hold Control",
+	"gui.staticpower.slots": "Slots",
+	"gui.staticpower.import_slots": "Import Slots",
+	"gui.staticpower.export_slots": "Export Slots"
 }
